--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOOL CỦA TRUNG NÈ</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="color.css">
 </head>
 <body>
-    <h2 style="text-align: center;">Tool của Trung nè</h2>
-    <div  style="display: flex;">
+    <div class="TrungLH-flex bg-pink flex-space">
+        <div class="h-100">
+            <a class="btn TrungLH-nav" href="./validate.html">Validate</a>
+
+        </div>
+        <h2 style="text-align: center;">Tool của Trung nè</h2>
+    </div>
+    <div class="TrungLH-flex">
         <div>
             <div>
                 
