--- a/validate.html
+++ b/validate.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOOL CỦA TRUNG NÈ</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="color.css">
+    <link rel="stylesheet" href="./style/main.css">
+    <link rel="stylesheet" href="./style/color.css">
 </head>
 <body>
     <div class="TrungLH-flex bg-pink flex-space">
         <div>
+            <a class="btn TrungLH-nav bg-danger" href="./validate.html">Validate</a>
             <a class="btn TrungLH-nav" href="./index.html">Max</a>
+            <a class="btn TrungLH-nav" href="./render.html">Render</a>
         </div>
         <h2 style="text-align: center;">Tool của Trung nè</h2>
     </div>
@@ -31,12 +33,6 @@
             <button class="btn-dark" id="Validate">Validate to insert</button>
         </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script type="module" src="./main_validate.js"></script>
-    <script>
-        $('#abc').on('input',function () { 
-            $('#abc').val($('#abc').val().split('\n'));
-        });
-    </script>
+    <script type="module" src="./javascript/main_validate.js"></script>
 </body>
 </html>
